--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 			<version>${karate.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+		<dependency>
+			<groupId>net.masterthought</groupId>
+			<artifactId>cucumber-reporting</artifactId>
+			<version>5.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
